travail sur la rejoue

--- a/BztErrorsManager/BztErrorsManager.Model/App.config
+++ b/BztErrorsManager/BztErrorsManager.Model/App.config
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EsbExceptionDbContext" connectionString="Data Source=vmcdsbiztalk;Initial Catalog=EsbExceptionDb;Integrated Security=True;MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />
+    <add name="EsbExceptionDbContext" connectionString="Data Source=vmcdsbiztalk;Initial Catalog=EsbExceptionDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="BizTalkMgmtDbEntities" connectionString="metadata=res://*/ModelBzt.BztModel.csdl|res://*/ModelBzt.BztModel.ssdl|res://*/ModelBzt.BztModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=vmcdsbiztalk;initial catalog=BizTalkMgmtDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
