--- a/BztErrorsManager/BztErrorsManager.Client/BztErrorsManager.Client.csproj
+++ b/BztErrorsManager/BztErrorsManager.Client/BztErrorsManager.Client.csproj
@@ -88,6 +88,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utility\MessageResubmitter.cs" />
     <Compile Include="Utility\UIServices.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
