--- a/BztErrorsManager/BztErrorsManager.Model/BztErrorsManager.Model.csproj
+++ b/BztErrorsManager/BztErrorsManager.Model/BztErrorsManager.Model.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +48,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModelBzt\adm_Adapter.cs">
+      <DependentUpon>BztModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ModelBzt\adm_ReceiveLocation.cs">
+      <DependentUpon>BztModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ModelBzt\BztModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BztModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ModelBzt\BztModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BztModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ModelBzt\BztModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BztModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\ActionType.cs" />
     <Compile Include="Models\Alert.cs" />
     <Compile Include="Models\AlertCondition.cs" />
@@ -91,6 +114,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="ModelBzt\BztModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>BztModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="ModelBzt\BztModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BztModel.edmx</DependentUpon>
+      <LastGenOutput>BztModel.Context.cs</LastGenOutput>
+    </None>
+    <None Include="ModelBzt\BztModel.edmx.diagram">
+      <DependentUpon>BztModel.edmx</DependentUpon>
+    </None>
+    <None Include="ModelBzt\BztModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BztModel.edmx</DependentUpon>
+      <LastGenOutput>BztModel.cs</LastGenOutput>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
