--- a/BztErrorsManager/BztErrorsManager.Client/BztErrorsManager.Client.csproj
+++ b/BztErrorsManager/BztErrorsManager.Client/BztErrorsManager.Client.csproj
@@ -140,6 +140,9 @@
       <Name>BztErrorsManager.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\btn_treated.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
