suppression de la commande Traiter

--- a/BztErrorsManager/BztErrorsManager.Client/App.config
+++ b/BztErrorsManager/BztErrorsManager.Client/App.config
@@ -8,10 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <!--<add name="EsbExceptionDbContext" connectionString="Data Source=vmcdsbiztalk;Initial Catalog=EsbExceptionDb;Integrated Security=True;MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />-->
-    <add name="EsbExceptionDbContext" connectionString="Server=gcav028;Database=EsbExceptionDb;User Id=ITHARDIS;Password=ITHARDIS;"
-      providerName="System.Data.SqlClient" />
+    <add name="EsbExceptionDbContext" connectionString="Data Source=.;Initial Catalog=EsbExceptionDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
